--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,17 @@
 {
+    "files.exclude": {
+        "**/.git": true,
+        "**/.svn": true,
+        "**/.hg": true,
+        "**/CVS": true,
+        "**/.DS_Store": true,
+        "**/Thumbs.db": true,
+        "*.egg-info": true
+    },
     "breadcrumbs.enabled": true,
     "editor.formatOnSave": false,
     "git.autofetch": true,
-    "python.linting.pylintArgs": [
+    "pylint.args": [
         "--disable=C0103, C0111, C0209, C0301, C0415, E0401, R0201, R0902, R0903, R0904, R0913, R0914, R0915, W0102, W1202, W1203, W0702, W0703",
         "--extension-pkg-whitelist=cv2",
         "--generated-members=cv2.*"
@@ -67,12 +76,10 @@
         "variant": "cpp"
     },
     "python.testing.pytestArgs": [
-        "UNIT_TESTS"
+        ""
     ],
     "python.testing.unittestEnabled": false,
     "python.testing.pytestEnabled": false,
-    "python.linting.pylintEnabled": true,
-    "telemetry.enableTelemetry": false,
     "python.testing.promptToConfigure": false,
     "python.languageServer": "Pylance",
     "typescript.tsdk": "node_modules/typescript/lib"
